--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -15,7 +15,8 @@
   {%- endblock %} | fatcat!</title>
 
   <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
+    type="text/css"
+    href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.6/dist/semantic.min.css"
     crossorigin="anonymous">
   <style>
     {# bnewbold: fix light grey bars in header #}
@@ -125,12 +126,11 @@
 </footer>
 
 <script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"
   crossorigin="anonymous">
 </script>
 <script
-  src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.2/dist/semantic.min.js"
+  src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.6/dist/semantic.min.js"
   crossorigin="anonymous">
 </script>
 {% block postscript %}{% endblock %}
