generic HTML views for TOML editing

--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -25,6 +25,10 @@
     @media only screen and (max-width: 479px) {
       .mobile-hide{ display: none !important; }
     }
+
+    .field textarea#toml {
+      font-family: monospace;
+    }
   </style>
   {% block extra_head %}{% endblock %}
 </head>
