wire up new TOML views

--- a/python/fatcat_web/templates/container_create.html
+++ b/python/fatcat_web/templates/container_create.html
@@ -9,13 +9,15 @@ a journal (eg, "New England Journal of Medicine"), conference proceedings, a
 book series, or a blog. Not all publications are in a container.
 
 <form class="ui form" id="create_container_form" method="POST" action="/container/create">
+  <p>Experienced users can also use the <a href="/container/create/toml">TOML
+  creation form</a> to access all metadata fields in a raw format.
 {% endblock %}
 
 {% block edit_form_suffix %}
   <br><br>
   <input class="ui primary submit button" type="submit" value="Create Container!">
   <p>
-  <i>New entity will be part of the current editgroup, which needs to be
+  <i>New container entity will be part of the current editgroup, which needs to be
   submited and approved before the entity will formally be included in the
   catalog.</i>
 </form>
