--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -171,11 +171,10 @@
 
 <tr><td><b>Creator</b>
         <br>authors, editors, translators
+    <td><a href="/creator/create">Create</a>
 {% if config.FATCAT_DOMAIN == 'fatcat.wiki' %}
-    <td>
     <td><a href="/creator/iimvc523xbhqlav6j3sbthuehu">Author</a>
 {% else %}
-    <td><!-- <a href="/creator/create">Create</a> -->
     <td><a href="/creator/iimvc523xbhqlav6j3sbthuehu">Author</a> (prod)
         <br><a href="/creator/aaaaaaaaaaaaaircaaaaaaaaai">Dummy</a>
         <br><a href="/creator/aaaaaaaaaaaaaircaaaaaaaaam">Realistic</a>
@@ -206,11 +205,10 @@
         </form>
 <tr><td><b>File Set</b>
         <br>datasets, suplementary materials
+    <td><a href="/fileset/create">Create</a>
 {% if config.FATCAT_DOMAIN == 'fatcat.wiki' %}
-    <td>
     <td><a href="/fileset/ho376wmdanckpp66iwfs7g22ne">Dataset</a>
 {% else %}
-    <td>
     <td><a href="/fileset/ho376wmdanckpp66iwfs7g22ne">Dataset</a> (prod)
         <br><a href="/fileset/aaaaaaaaaaaaaztgaaaaaaaaai">Dummy</a>
         <br><a href="/fileset/aaaaaaaaaaaaaztgaaaaaaaaam">Realistic</a>
@@ -218,12 +216,11 @@
     <td>
 <tr><td><b>Web Capture</b>
         <br>HTML and interactive articles, blog posts
+    <td><a href="/webcapture/create">Create</a>
 {% if config.FATCAT_DOMAIN == 'fatcat.wiki' %}
-    <td>
     <td><a href="/webcapture/z7uaeatyvfgwdpuxtrdu4okqii">D-Lib</a>
         <br><a href="/webcapture/5l2pubtfefbmdnqws2izccqlpm">Blog Post</a>
 {% else %}
-    <td>
     <td><a href="/webcapture/z7uaeatyvfgwdpuxtrdu4okqii">D-Lib</a> (prod)
         <br><a href="/webcapture/aaaaaaaaaaaaa53xaaaaaaaaai">Dummy</a>
         <br><a href="/webcapture/aaaaaaaaaaaaa53xaaaaaaaaam">Realistic</a>
@@ -231,11 +228,10 @@
     <td>
 <tr><td><b>Work</b>
         <br>for grouping Releases
+    <td><a href="/work/create">Create</a>
 {% if config.FATCAT_DOMAIN == 'fatcat.wiki' %}
-    <td>
     <td><a href="/work/ftl6xv267vb6xfech3khri3nwa">Paper</a>
 {% else %}
-    <td>
     <td><a href="/work/ftl6xv267vb6xfech3khri3nwa">Paper</a> (prod)
         <br><a href="/work/aaaaaaaaaaaaavkvaaaaaaaaai">Dummy</a>
         <br><a href="/work/aaaaaaaaaaaaavkvaaaaaaaaam">Realistic</a>
