--- a/python/fatcat_web/templates/file_create.html
+++ b/python/fatcat_web/templates/file_create.html
@@ -5,13 +5,15 @@
 <h1 class="ui header">Create New File Entity</h1>
 
 <form class="ui form" id="create_file_form" method="POST" action="/file/create">
+  <p>Experienced users can also use the <a href="/file/create/toml">TOML
+  creation form</a> to access all metadata fields in a raw format.
 {% endblock %}
 
 {% block edit_form_suffix %}
   <br><br>
   <input class="ui primary submit button" type="submit" value="Create File!">
   <p>
-  <i>New entity will be part of the current editgroup, which needs to be
+  <i>New file entity will be part of the current editgroup, which needs to be
   submited and approved before the entity will formally be included in the
   catalog.</i>
 </form>
