routes: handle case of viewing deleted entity in editgroup context
Eg, consider deleting an entity. When viewing the editgroup, want to be
able to click the deleted entity and see the "deleted entity" page
instead of a generic 404.

--- a/python/fatcat_web/templates/deleted_entity.html
+++ b/python/fatcat_web/templates/deleted_entity.html
@@ -30,7 +30,7 @@
 <b>Entity Type:</b> <code>{{ entity_type }}</code>
 </div>
 
-{{ entity_macros.fatcat_bits(entity, entity_type, "") }}
+{{ entity_macros.fatcat_bits(entity, entity_type, "", editgroup=editgroup) }}
 
 </div>
 </div>
